# OpenLiveReplay

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .mull.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CodecSettingsPanel.qml  LICENSE.md  Main.qml  MultiviewWindow.qml  PreviewWindow.qml  README.md  main.cpp  qmllint.ini.in  qtquickcontrols2.conf  resources.qrc  settingsmanager.cpp  settingsmanager.h  uimanager.cpp  uimanager.h
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml  ci.yml
build-scripts/: build_ffmpeg_ios_srt.sh  build_ffmpeg_macos_app_srt.sh  build_ffmpeg_macos_srt.sh  build_ffmpeg_windows_srt.sh  build_macos_app.sh  build_streamdeck_bridge.sh  build_windows_app.sh
docs/: broadcast-readiness-roadmap.md  build-and-run.md  gammaray.md  native-ingest-workstream-remaining.md  smpte-relevant-standards.md  websocket-control-api.md  windows-aac-rtmp-smoke-runbook.md  windows-build.md
docs/openapi/: README.md  olr-provider-v1.openapi.json  (+3 more)
ios/: Info.plist  OpenLiveReplay.entitlements  ios_scene.h  ios_scene.mm
midi/: midimanager.cpp  midimanager.h
playback/: audioframequeue.cpp  audioframequeue.h  audioplayer.cpp  audioplayer.h  commitgate.h  cutschedule.cpp  cutschedule.h  frameindex.cpp  frameindex.h  frameprovider.cpp  frameprovider.h  framerate.h  playbacktransport.cpp  playbacktransport.h  playbackworker.cpp  playbackworker.h  playlistentriesmodel.cpp  playlistentriesmodel.h  playlistplayout.cpp  playlistplayout.h  replayplaylist.cpp  replayplaylist.h  seekcoalescer.h  telemetrytimelinereader.cpp  telemetrytimelinereader.h  trackbuffer.cpp  trackbuffer.h
project/: projectimportclient.cpp  projectimportclient.h  projectsettingsimporter.cpp  projectsettingsimporter.h
recorder_engine/: framerate.cpp  framerate.h  heartbeat.cpp  heartbeat.h  mediafoundationruntime.cpp  mediafoundationruntime.h  muxer.cpp  muxer.h  recordingclock.cpp  recordingclock.h  replaymanager.cpp  replaymanager.h  streamworker.cpp  streamworker.h
streamdeck/: streamdeckmanager.h  streamdeckmanager.mm  streamdeckmanager_stub.cpp  streamdeckmappingstore.cpp  streamdeckmappingstore.h
telemetry/: sseparser.cpp  sseparser.h  telemetryclient.cpp  telemetryclient.h  telemetryevent.h
tests/: CMakeLists.txt  README.md  lsan.suppressions.txt  tsan.suppressions.txt
tests/e2e/: CMakeLists.txt  FRAMESYNC.md  SRT_README.md  SYNC_BASELINE.md  lossy_udp_relay.py  marker_yuv_probe.cpp  ndi_lib.sh  ndi_marker_mkv_source.cpp  ndi_marker_pattern.cpp  ndi_marker_pattern.h  ndi_marker_sender.cpp  ndi_output_marker.cpp  ndi_output_marker.h  ndi_output_sender.cpp  ndi_recv_analysis.cpp  ndi_recv_analysis.h  ndi_recv_probe.cpp  ndi_runtime_sender.cpp  play_harness.cpp  record_harness.cpp  rtmp_fixture_server.py  rtmp_lib.sh  run_aac_matrix_e2e.sh  run_drift_soak.sh  run_framesync_e2e.sh  run_framesync_matrix.sh  run_ndi_e2e_pipe.sh  run_ndi_output_e2e.sh  run_ndi_playback_e2e.sh  run_ndi_reconnect.sh  run_ndi_smoke.sh  run_ndi_soak.sh  run_output_soak.sh  run_playback_e2e.sh  run_record_e2e.sh  run_record_h264_e2e.sh  run_rtmp_hevc_smoke.sh  run_rtmp_interop.sh  run_rtmp_reconnect.sh  run_rtmp_smoke.sh  (+26 more)
tests/fuzz/: CMakeLists.txt  README.md  fuzz_h26xaccessunit.cpp  fuzz_h26xseitimecode.cpp  fuzz_mpegtsparser.cpp  fuzz_rtmpprotocol.cpp
tests/fuzz/seeds/fuzz_h26xaccessunit/: h264_sps_pps_idr  hevc_vps_sps_pps
tests/fuzz/seeds/fuzz_h26xseitimecode/: h264_pic_timing_sei
tests/fuzz/seeds/fuzz_mpegtsparser/: unbounded_length0_pes  valid_pat_pmt_pes
tests/fuzz/seeds/fuzz_rtmpprotocol/: set_chunk_size  type0_amf_command
tests/probes/: CMakeLists.txt  audit_fixture_color_tags.sh  rhi_d3d_probe.cpp  rhi_import_probe.cpp  rhi_import_probe.mm
tests/qml/: CMakeLists.txt  tst_codecsettingspanel.qml  tst_qml_main.cpp
tests/qmlstyle/: CMakeLists.txt  gallery_preview.qml  preview_bindings.qml  preview_cockpit.qml  preview_drawer.qml  preview_onair.qml  preview_outputs.qml  preview_project.qml  preview_rundownrail.qml  preview_scrub.qml  preview_sources.qml  preview_stage.qml  preview_statusstrip.qml  preview_transport.qml  tst_olrstyle.qml  tst_olrstyle_main.cpp  tst_pgmstage_mapping.qml  tst_pgmstage_mapping_main.cpp  tst_rundownrail_drag.qml  tst_rundownrail_drag_main.cpp  tst_scrubtimeline.qml  tst_scrubtimeline_main.cpp  tst_sourcelistpanel_layout.qml  tst_sourcelistpanel_layout_main.cpp  tst_statusstrip_onair.qml  tst_statusstrip_onair_main.cpp  tst_transportdock_layout.qml  tst_transportdock_layout_main.cpp  uipreview_main.cpp
tests/smoke/: CMakeLists.txt  check_ios_ffmpeg_build_config.sh
tests/unit/: CMakeLists.txt  framepsnr.h  tst_audioframequeue.cpp  tst_audioplayer_mutefade.cpp  tst_audioservo.cpp  tst_audiotoolboxaacdecoder.cpp  tst_avcc.cpp  tst_benchmarkcache.cpp  tst_benchmarkplan.cpp  tst_broadcastoutputsettings.cpp  tst_codecbenchmark.cpp  tst_colormetadataplumb.cpp  tst_colormetadatapolicy.cpp  tst_colortags_apple.cpp  tst_colorvui.cpp  tst_commitgate.cpp  tst_controlprotocol.cpp  tst_controlstate.cpp  tst_controlwebsocketserver.cpp  tst_cutschedule.cpp  tst_decodedonefence.cpp  tst_driftestimator.cpp  tst_evictionguard.cpp  tst_formatcanon.cpp  tst_framehandle.cpp  tst_frameindex.cpp  tst_framerate.cpp  tst_gpu_microstress.cpp  tst_gpu_sync_stress.cpp  tst_gpucompositor.cpp  tst_gpucompositor_stress.cpp  tst_gpufence.cpp  tst_gpuframedata.cpp  tst_gpugeneration.cpp  tst_gpureadbacktelemetry.cpp  tst_gpurhicontext.cpp  tst_gpusurface.cpp  tst_h264_roundtrip.cpp  tst_h26xaccessunit.cpp  tst_h26xseitimecode.cpp  (+67 more)
ui/style/: Button.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  Frame.qml  GroupBox.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuItem.qml  Popup.qml  ScrollBar.qml  Slider.qml  SpinBox.qml  Switch.qml  TabBar.qml  TabButton.qml  TextField.qml  ToolButton.qml  ToolTip.qml
websocket/: controlapiadapter.h  controlprotocol.cpp  controlprotocol.h  controlstate.cpp  controlstate.h  controlwebsocketserver.cpp  controlwebsocketserver.h  uimanagercontroladapter.cpp  uimanagercontroladapter.h
(+312 files in other folders)
